# screen-note

./: .gitignore  ARCHIVE_PACKAGING.md  README.md  cargo_tree_features.txt  index.html  installer.iss  package-lock.json  package.json
.github/: copilot-instructions.md
.tmp/: auth_info.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  mouse_passthrough.rs
src/core/: canvas-manager.js  eraser-tool.js  event-bus.js  history-manager.js  mouse-passthrough-api.js  pen-tool.js  pointer-tool.js  select-tool.js  stroke-index.js
src/main/: index.js
src/ui/: color-wheel.js  eraser-panel.js  floating-button.js  pen-panel.js  settings-modal.js  styles.css  toolbar-button.js
src/utils/: positioning.js
todo/: backlog.md
trash/cleanup-20251028-010623/: neutralino.config.json
